src/objects/SPE_RegionMaster__c.object
<CustomObject>
    <fields>
        <fullName>CORegion__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPRSubregion__c</fullName>
        <label>GPR Subregion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPRregion__c</fullName>
        <label>GPR Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketUnit__c</fullName>
        <label>Market Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Region Master</label>
    <nameField>
        <displayFormat>RM-{000}</displayFormat>
        <label>RegionMasterId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>